# scietex.service

./: .coverage  .gitignore  .ruff.toml  cspell.json  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: pylint.yml  python-lint.yml  python-package.yml  python-publish.yml
examples/: async_service.py  async_task_processor.py  redis_async_service.py  valkey_async_service.py
src/scietex/service/: __init__.py  async_tasks_processor.py  basic_async_worker.py  basic_sync_worker.py  logo.py  redis_async_worker.py  redis_sync_worker.py  valkey_async_worker.py  version.py  worker_manager.py
src/scietex/service/logging/: async_handler.py  console.py  formatter.py  redis_sync.py
src/scietex/service/task_handlers/: __init__.py  basic.py  schemas.py  types.py
src/scietex/service/valkey/: __init__.py  schemas.py  valkey_async_worker.py  valkey_async_worker_messaging.py  valkey_config.py
tests/: test_async_task_processor.py  test_basic_async_service.py  test_basic_service.py  test_redis_service.py  test_task_handler_basic.py  test_valkey_config.py  test_valkey_worker.py  test_version.py
