[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scietex.service"
dynamic = ["version"]
description = "Scietex service daemon impementation"
authors = [{ name = "Anton Bondarenko", email = "bond.anton@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["msgspec>=0.20.0", "scietex.logging>=0.1.2"]

[project.urls]
"Homepage" = "https://github.com/bond-anton/scietex.service"
"Bug Tracker" = "https://github.com/bond-anton/scietex.service/issues"

[project.optional-dependencies]
redis = ["scietex.logging[redis]>=0.1.2", "redis>=5.0.0"]
valkey = ["scietex.logging[valkey]>=0.1.2", "valkey-glide>=2.2.0"]
dev = ["redis>=5.0.0", "tox>=4.45.0", "valkey-glide>=2.2.0"]
test = ["flake8", "pytest", "pytest-asyncio"]
lint = ["pylint"]

[tool.setuptools.dynamic]
version = { attr = "scietex.service.version.__version__" }

[tool.setuptools.package-data]
"scietex.service" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
